# rosbag2_composable_recorder

./: CMakeLists.txt  README.md  package.xml
.github/scripts/: build_ros2.bash
.github/workflows/: main.yaml
include/rosbag2_composable_recorder/: composable_recorder.hpp
launch/: recorder.launch.py
src/: composable_recorder.cpp  composable_recorder_node.cpp  start_recording.py
